AC_INIT(lisp/gnus.el)
AC_DEFINE_GNUS_PRODUCT_NAME(t-gnus)
AC_SET_MAKE
AC_PROG_INSTALL
AC_CHECK_PROG(MAKEINFO, makeinfo, makeinfo, no)
AC_CHECK_EMACS
AC_PATH_LISPDIR
AC_PATH_ETCDIR
AC_CHECK_W3
AC_PATH_PACKAGEDIR
AC_ADD_LOAD_PATH
AC_OUTPUT(Makefile lisp/Makefile lisp/dgnuspath.el texi/Makefile etc/Makefile)
