AC_INIT(lisp/gnus.el)
AC_DEFINE_GNUS_PRODUCT_NAME(t-gnus)
AC_SET_MAKE
AC_PROG_INSTALL
AC_CHECK_PROG(MAKEINFO, makeinfo, makeinfo, no)
AC_CHECK_EMACS
AC_PATH_LISPDIR
AC_PATH_ETCDIR
AC_PATH_INFO_DIR
AC_CHECK_URL
AC_CHECK_W3
GNUS_CHECK_FONTS
AC_PATH_PACKAGEDIR
AC_ADD_LOAD_PATH
AC_OUTPUT(Makefile etc/Makefile lisp/Makefile texi/Makefile \
 texi/gnusconfig.tex texi/ps/Makefile lisp/dgnuspath.el)
